--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,14 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>bdd-doc</name>
-    <url>http://maven.apache.org</url>
+    <url>http://github.com/oschoen/bdd-doc</url>
 
+
+    <scm>
+        <connection>scm:git:git://github.com/oschoen/bdd-doc.git</connection>
+        <url>http://github.com/oschoen/bdd-doc</url>
+        <developerConnection>scm:git:git@github.com:oschoen/bdd-doc.git</developerConnection>
+    </scm>
 
     <build>
         <plugins>
